--- a/package.json
+++ b/package.json
@@ -20,69 +20,69 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "10.0.0",
-    "@nestjs/config": "3.2.3",
-    "@nestjs/core": "10.0.0",
+    "@nestjs/common": "10.4.13",
+    "@nestjs/config": "3.3.0",
+    "@nestjs/core": "10.4.13",
     "@nestjs/jwt": "10.2.0",
     "@nestjs/passport": "10.0.3",
-    "@nestjs/platform-express": "10.0.0",
-    "@nestjs/platform-socket.io": "10.4.1",
-    "@nestjs/swagger": "7.4.0",
+    "@nestjs/platform-express": "10.4.13",
+    "@nestjs/platform-socket.io": "10.4.13",
+    "@nestjs/swagger": "8.1.0",
     "@nestjs/typeorm": "10.0.2",
-    "@nestjs/websockets": "10.4.1",
-    "axios": "1.7.8",
+    "@nestjs/websockets": "10.4.13",
+    "axios": "1.7.9",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "cookie-parser": "1.4.6",
-    "csurf": "^1.11.0",
-    "dotenv": "16.4.5",
-    "express": "4.21.0",
-    "express-session": "1.18.0",
-    "helmet": "7.1.0",
-    "mysql2": "3.11.4",
-    "reflect-metadata": "0.1.13",
+    "cookie-parser": "1.4.7",
+    "csurf": "1.10.0",
+    "dotenv": "16.4.7",
+    "express": "5.0.1",
+    "express-session": "1.18.1",
+    "helmet": "8.0.0",
+    "mysql2": "3.11.5",
+    "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
     "sequelize-typescript": "2.1.6"
   },
   "devDependencies": {
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
-    "@nestjs/cli": "10.0.0",
-    "@nestjs/schematics": "10.0.0",
-    "@nestjs/testing": "10.0.0",
-    "@types/cookie-parser": "1.4.7",
+    "@nestjs/cli": "10.4.8",
+    "@nestjs/schematics": "10.2.3",
+    "@nestjs/testing": "10.4.13",
+    "@types/cookie-parser": "1.4.8",
     "@types/dompurify": "3.0.5",
     "@types/express": "5.0.0",
-    "@types/jest": "29.5.2",
+    "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
-    "@types/node": "20.3.1",
+    "@types/node": "22.10.1",
     "@types/sequelize": "4.28.20",
-    "@types/supertest": "6.0.0",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "9.0.0",
+    "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "8.17.0",
+    "@typescript-eslint/parser": "8.17.0",
+    "eslint": "9.16.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-array-func": "5.0.2",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest": "28.8.3",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-unused-imports": "4.1.3",
+    "eslint-plugin-unused-imports": "4.1.4",
     "husky": "9.1.7",
-    "jest": "29.5.0",
+    "jest": "29.7.0",
     "lint-staged": "15.2.10",
-    "prettier": "3.3.3",
+    "prettier": "3.4.2",
     "prettier-eslint": "16.3.0",
     "prettier-plugin-organize-imports": "4.1.0",
-    "sequelize": "6.37.4",
+    "sequelize": "6.37.5",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
-    "ts-jest": "29.1.0",
-    "ts-loader": "9.4.3",
-    "ts-node": "10.9.1",
+    "ts-jest": "29.2.5",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
