--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "7.4.0",
     "@nestjs/typeorm": "10.0.2",
     "@nestjs/websockets": "10.4.1",
+    "@qubic-lib/qubic-ts-library": "^0.1.5",
     "axios": "1.7.8",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
