--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/core": "^6.4.1",
+    "@mikro-orm/mysql": "^6.4.1",
+    "@mikro-orm/nestjs": "^6.0.2",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.0.0",
