--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,35 +1,57 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {"project": "tsconfig.json", "sourceType": "module"},
-  "plugins": ["@typescript-eslint/eslint-plugin", "import"],
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "parserOptions": {
+    "project": "tsconfig.json",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "@typescript-eslint",
+    "import"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
-    "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "no-empty-function": "off",
-    "@typescript-eslint/no-empty-function": "off",
-    "no-multiple-empty-lines": ["error", {"max": 1}],
-
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 1
+      }
+    ],
     "import/order": [
-         "error",
-         {
-           "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
-           "pathGroups": [
-             {
-               "pattern": "@/**",
-               "group": "internal"
-             }
-           ],
-           "pathGroupsExcludedImportTypes": ["builtin"],
-           "newlines-between": "always",
-           "alphabetize": {
-             "order": "asc",
-             "caseInsensitive": true
-           }
-         }
-       ]
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "@/**",
+            "group": "internal"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": [
+          "builtin"
+        ],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
   },
-  "ignorePatterns": [".eslintrc.js"]
+  "ignorePatterns": [
+    ".eslintrc.js"
+  ]
 }
