--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mikro-orm/core": "^6.4.1",
     "@mikro-orm/mysql": "^6.4.1",
     "@mikro-orm/nestjs": "^6.0.2",
+    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.0.0",
