--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "schema:generate": "npx mikro-orm schema:update --run"
   },
   "dependencies": {
-    "@mikro-orm/core": "^6.4.1",
-    "@mikro-orm/mysql": "^6.4.1",
-    "@mikro-orm/nestjs": "^6.0.2",
-    "@mikro-orm/sql-highlighter": "^1.0.1",
+    "@mikro-orm/cli": "6.4.1",
+    "@mikro-orm/core": "6.4.1",
+    "@mikro-orm/mysql": "6.4.1",
+    "@mikro-orm/nestjs": "6.0.2",
+    "@mikro-orm/entity-generator": "6.4.1",
+    "@mikro-orm/sql-highlighter": "1.0.1",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.0.0",
@@ -34,12 +37,12 @@
     "@nestjs/swagger": "7.4.0",
     "@nestjs/typeorm": "10.0.2",
     "@nestjs/websockets": "10.4.1",
-    "@qubic-lib/qubic-ts-library": "^0.1.5",
+    "@qubic-lib/qubic-ts-library": "0.1.5",
     "axios": "1.7.8",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "cookie-parser": "1.4.6",
-    "csurf": "^1.11.0",
+    "csurf": "1.11.0",
     "dotenv": "16.4.5",
     "express": "4.21.0",
     "express-session": "1.18.0",
