--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "schema:generate": "npx mikro-orm schema:update --run"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
     "@mikro-orm/cli": "6.4.1",
     "@mikro-orm/core": "6.4.1",
+    "@mikro-orm/entity-generator": "6.4.1",
     "@mikro-orm/mysql": "6.4.1",
     "@mikro-orm/nestjs": "6.0.2",
-    "@mikro-orm/entity-generator": "6.4.1",
     "@mikro-orm/sql-highlighter": "1.0.1",
     "@nestjs/common": "10.0.0",
     "@nestjs/config": "3.2.3",
