--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@types/dompurify": "3.0.5",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.2",
-    "@types/multer": "1.4.12",
+    "@types/multer": "^1.4.12",
     "@types/node": "20.3.1",
     "@types/sequelize": "4.28.20",
     "@types/supertest": "6.0.0",
