--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "schema:generate": "npx mikro-orm schema:update --run"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "@faker-js/faker": "^9.4.0",
     "@mikro-orm/cli": "6.4.1",
     "@mikro-orm/core": "6.4.1",
