--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "schema:generate": "npx mikro-orm schema:update --run"
+    "migrate": "ts-node src/migrate.ts",
+    "migrate:create": "npx mikro-orm migration:create --config=./src/mikro-orm.config.ts",
+    "migrate:up": "npx mikro-orm migration:up --config=src/mikro-orm.config.ts",
+    "migrate:down": "npx mikro-orm migration:down --config=src/mikro-orm.config.ts"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.26.0",
-    "@mikro-orm/cli": "6.4.6",
-    "@mikro-orm/core": "6.4.6",
-    "@mikro-orm/entity-generator": "6.4.6",
-    "@mikro-orm/mysql": "6.4.6",
+    "@mikro-orm/cli": "6.4.16",
+    "@mikro-orm/core": "6.4.16",
+    "@mikro-orm/entity-generator": "6.4.16",
+    "@mikro-orm/migrations": "6.4.16",
+    "@mikro-orm/mysql": "6.4.16",
     "@mikro-orm/nestjs": "6.1.1",
     "@mikro-orm/sql-highlighter": "1.0.1",
     "@nestjs/common": "11.0.10",
