--- a/src/migrations/.snapshot-nostromo-launchpad.json
+++ b/src/migrations/.snapshot-nostromo-launchpad.json
@@ -503,6 +503,17 @@
           "default": "null",
           "mappedType": "text"
         },
+        "smartContractId": {
+          "name": "smartContractId",
+          "type": "int",
+          "unsigned": false,
+          "autoincrement": false,
+          "primary": false,
+          "nullable": true,
+          "length": null,
+          "default": "null",
+          "mappedType": "integer"
+        },
         "createdAt": {
           "name": "createdAt",
           "type": "datetime",
