--- a/src/migrations/.snapshot-nostromo-launchpad.json
+++ b/src/migrations/.snapshot-nostromo-launchpad.json
@@ -325,6 +325,28 @@
           "default": "null",
           "mappedType": "text"
         },
+        "votingStartDate": {
+          "name": "votingStartDate",
+          "type": "datetime",
+          "unsigned": false,
+          "autoincrement": false,
+          "primary": false,
+          "nullable": true,
+          "length": null,
+          "default": "null",
+          "mappedType": "datetime"
+        },
+        "votingEndDate": {
+          "name": "votingEndDate",
+          "type": "datetime",
+          "unsigned": false,
+          "autoincrement": false,
+          "primary": false,
+          "nullable": true,
+          "length": null,
+          "default": "null",
+          "mappedType": "datetime"
+        },
         "amountToRaise": {
           "name": "amountToRaise",
           "type": "float",
@@ -347,6 +369,17 @@
           "scale": 0,
           "default": "null",
           "mappedType": "decimal"
+        },
+        "publishDate": {
+          "name": "publishDate",
+          "type": "datetime",
+          "unsigned": false,
+          "autoincrement": false,
+          "primary": false,
+          "nullable": true,
+          "length": null,
+          "default": "null",
+          "mappedType": "datetime"
         },
         "startDate": {
           "name": "startDate",
