--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "migrate:down": "npx mikro-orm migration:down --config=src/mikro-orm.config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.922.0",
+    "@aws-sdk/lib-storage": "^3.922.0",
     "@azure/storage-blob": "^12.26.0",
     "@mikro-orm/cli": "6.4.16",
     "@mikro-orm/core": "6.4.16",
